Fix navigation appereance on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 :root {
   --secondary-font: "Alegreya Sans SC", sans-serif;
-  /* --secondary-color: #800080; */
   --secondary-color: #0e835d;
 }
 
@@ -86,9 +85,13 @@ nav.active {
     );
 }
 
-#menu {
+/* #menu {
   display: flex;
   list-style: none;
+} */
+
+#menu {
+  display: none;
 }
 
 .modal-links li {
@@ -105,6 +108,10 @@ nav.active #menu {
   flex-direction: column;
   align-items: center;
   padding: 30px;
+}
+
+.nav-link {
+  display: ;
 }
 
 .tags li {
@@ -135,14 +142,16 @@ nav.active #menu li {
   font-size: 20px;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 1024px) {
   #menu {
-    display: none;
+    display: flex;
+    list-style: none;
   }
 }
 
 #menu.active {
   display: flex;
+  list-style: none;
 }
 
 #burger {
@@ -389,7 +398,9 @@ form ul {
 }
 
 #skills {
-  height: 100vh;
+  /* height: 100vh; */
+  height: 60vh;
+  padding-top: 100px;
   display: flex;
 }
 
